<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.uitraci.hotel.voice.LoginVoice">

    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"-->

    <EditText
        android:id="@+id/edt_uid_loginvoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:editable="false"
        android:hint="@string/txt_username_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:visibility="invisible"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_uidrec"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_uid_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_search_loginvoice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_search"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_verify_loginvoice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_login_voice_verify"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_getuid_loginvoice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_getuid"
            android:visibility="invisible"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_delete_loginvoice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_delete"
            android:visibility="invisible"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_showPwd_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_showMsg_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="right" >

        <TextView
            android:id="@+id/Tv_Register_Voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_voice"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
