<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.uitraci.hotel.voice.RegisterVoice">
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"-->

    <EditText
        android:id="@+id/edt_result_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="top|left"
        android:inputType=""
        android:maxLines="2"
        android:minLines="2"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_uidrec"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_uid_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="16sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_getpassword_rv"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_getpwd"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_stoprecord_rv"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dip"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_stoprec"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btn_rv"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_rv"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_cancelrv"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dip"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_cancelrv"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5dip"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal" >-->

        <!--<Button-->
            <!--android:id="@+id/btn_rv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@drawable/btn_bkg"-->
            <!--android:text="@string/txt_rv"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="16sp" />-->

        <!--<Button-->
            <!--android:id="@+id/btn_cancelrv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginLeft="20dip"-->
            <!--android:background="@drawable/btn_bkg"-->
            <!--android:text="@string/txt_cancelrv"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="16sp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_returnlv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bkg"
            android:text="@string/txt_return"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/layout_tv3">

        <TextView
            android:id="@+id/tv_showPwd_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_showMsg_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_showRegFbk_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
